--- a/_output.yaml
+++ b/_output.yaml
@@ -1,10 +1,13 @@
-title: "Virgile Korsec resume"
-author: Virgile Korsec
-theme: jekyll-theme-minimal
-output:
-  pagedown::html_resume:
-#    css: ['dd_cv.css']
-    # set it to true for a self-contained HTML page but it'll take longer to render
+project:
+  type: website
+
+website:
+  title: ""
+
+format:
+  html:
+    theme: jekyll-theme-minimal
+#    css: styles.css
     self_contained: false
-# uncomment this line to produce HTML and PDF in RStudio:
-#knit: pagedown::chrome_print
+
+editor: visual
