--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-.Rproj.user/
-*Rproj
-.Rhistory
-resume_files/
-.secrets
-.DS_Store
-README.html
-*_cache/
-cv.html
-
-ddcv_cache.rds
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
